--- a/SistemaBancarioWeb/login.html
+++ b/SistemaBancarioWeb/login.html
@@ -14,6 +14,9 @@
     <section class="login-form">
         <h2>Faça Login</h2>
         <form action="dashboard.html">
+            <label for="accountNumber">Número da Conta:</label>
+            <input type="text" id="accountNumber" name="accountNumber" required>
+
             <label for="username">Usuário:</label>
             <input type="text" id="username" name="username" required>
 
@@ -23,7 +26,5 @@
             <button type="submit">Login</button>
         </form>
     </section>
-
-    
 </body>
 </html>
