--- a/SistemaBancarioWeb/login.html
+++ b/SistemaBancarioWeb/login.html
@@ -14,8 +14,9 @@
     <section class="login-form">
         <h2>Faça Login</h2>
         <form action="dashboard.html">
+
             <label for="accountNumber">Número da Conta:</label>
-            <input type="text" id="accountNumber" name="accountNumber" required>
+            <input type="text" id="accountNumber" name="accountNumber" pattern="[0-9]+" title="Por favor, insira apenas números" required>
 
             <label for="username">Usuário:</label>
             <input type="text" id="username" name="username" required>
