--- a/SistemaBancarioWeb/TelaInicial/index.html
+++ b/SistemaBancarioWeb/TelaInicial/index.html
@@ -12,8 +12,8 @@
         <h2>Bem-vindo ao Sistema Bancário</h2>
         <p>Faça login ou cadastre-se para acessar sua conta.</p>
         <div class="buttons">
-            <a href="login.html" class="btn-login">Login</a>
-            <a href="register.html" class="btn-register">Cadastre-se</a>
+            <a href="../TelaLogin/login.html" class="btn-login">Login</a>
+            <a href="../TelaRegistrar/register.html" class="btn-register">Cadastre-se</a>
 
         </div>
     </section>
