--- a/SistemaBancarioWeb/TelaLogin/login.html
+++ b/SistemaBancarioWeb/TelaLogin/login.html
@@ -13,7 +13,7 @@
 
     <section class="login-form">
         <h2>Faça Login</h2>
-        <form action="dashboard.html">
+        <form action="../TelaPrincipal/dashboard.html">
             <label for="accountNumber">Número da Conta:</label>
             <input type="text" id="accountNumber" name="accountNumber" pattern="[0-9]+" title="Por favor, insira apenas números" required>
         
