--- a/SistemaBancarioWeb/TelaPrincipal/dashboard.html
+++ b/SistemaBancarioWeb/TelaPrincipal/dashboard.html
@@ -27,8 +27,8 @@
         <h1> WYK - Sistema Bancário</h1>
         <nav>
             <ul>
-                <li><a href="saque.html">Saque/Deposito</a></li>
-                <li><a href="transferencia.html">Transferência</a></li>
+                <li><a href="../TelaSacar/saque.html">Saque/Deposito</a></li>
+                <li><a href="../TelaTransferencia/transferencia.html">Transferência</a></li>
                 
             </ul>
         </nav>
