--- a/SistemaBancarioWeb/TelaSacar/saque.html
+++ b/SistemaBancarioWeb/TelaSacar/saque.html
@@ -11,8 +11,8 @@
         <h1>Saque/Depósito - Sistema Bancário</h1>
         <nav>
             <ul>
-                <li><a href="dashboard.html">Dashboard</a></li>
-                <li><a href="transferencia.html">Transferência</a></li>
+                <li><a href="../TelaPrincipal/dashboard.html">Dashboard</a></li>
+                <li><a href="../TelaTransferencia/transferencia.html">Transferência</a></li>
             </ul>
         </nav>
     </header>
