--- a/SistemaBancarioWeb/TelaRegistrar/register.html
+++ b/SistemaBancarioWeb/TelaRegistrar/register.html
@@ -13,7 +13,7 @@
 
     <section class="register-form">
         <h2>Cadastre-se</h2>
-        <form action="dashboard.html">
+        <form id="registerForm">
 
             <label for="name">Nome:</label>
             <input type="text" id="name" name="name" required>
@@ -24,12 +24,31 @@
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
 
-            
-
-            <button type="submit">Cadastrar</button>
+            <button type="button" onclick="registerUser()">Cadastrar</button>
         </form>
     </section>
 
-    
+    <script>
+        function generateAccountNumber() {
+            // Gera um número de conta aleatório
+            return Math.floor(Math.random() * 1000000);
+        }
+
+        function registerUser() {
+            var name = document.getElementById("name").value;
+            var age = document.getElementById("age").value;
+            var email = document.getElementById("email").value;
+
+            // Gera o número da conta
+            var accountNumber = generateAccountNumber();
+
+            // Armazena os dados do usuário no localStorage
+            localStorage.setItem('username', name);
+            localStorage.setItem('accountNumber', accountNumber);
+
+            // Redireciona para a página de dashboard
+            window.location.href = "dashboard.html?accountNumber=" + accountNumber + "&username=" + name;
+        }
+    </script>
 </body>
 </html>
