--- a/SistemaBancarioWeb/TelaTransferencia/transferencia.html
+++ b/SistemaBancarioWeb/TelaTransferencia/transferencia.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Transferência</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="tranferenciaStyles.css">
 </head>
 <body>
     <header>
         <h2 class="title">Transferência</h2>
+
+        <nav>
+            <ul>
+                <li><a href="../TelaPrincipal/dashboard.html">Dashboard</a></li> 
+            </ul>
+        </nav>
+
     </header>
     <form action="process_transfer.php" method="post">
         <label for="amount">Valor da Transferência:</label>
