arrumei a interface da telaInicio

--- a/SistemaBancarioWeb/TelaLogin/login.html
+++ b/SistemaBancarioWeb/TelaLogin/login.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <img src="imgs/_b7cacc34-feda-4d23-b983-75d1944c5123-removebg-preview.png" alt="Logo">
         <h1>Login - Sistema Bancário</h1>
     </header>
 
