--- a/SistemaBancarioWeb/TelaTransferencia/transferencia.html
+++ b/SistemaBancarioWeb/TelaTransferencia/transferencia.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Transferência</title>
     <link rel="stylesheet" href="tranferenciaStyles.css">
+    <style>
+        .success-message {
+            color: green;
+            margin-top: 10px;
+        }
+        .error-message {
+            color: red;
+            margin-top: 10px;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -17,14 +27,52 @@
         </nav>
 
     </header>
-    <form action="process_transfer.php" method="post">
+    <form id="transferForm">
         <label for="amount">Valor da Transferência:</label>
         <input type="number" id="amount" name="amount" min="0" step="0.01" required>
         
         <label for="destination">Conta de Destino:</label>
         <input type="text" id="destination" name="destination" required>
 
-        <button type="submit">Transferir</button>
+        <button type="button" onclick="simularTransferencia()">Transferir</button>
+        <div id="message" class="hidden"></div>
     </form>
+
+    <script>
+        function simularTransferencia() {
+            var amount = parseFloat(document.getElementById('amount').value);
+            var saldo = parseFloat(localStorage.getItem('saldo'));
+            var destination = document.getElementById('destination').value;
+
+            if (isNaN(amount) || amount <= 0) {
+                showMessage('error', 'Digite um valor válido para a transferência.');
+                return;
+            }
+
+            if (!destination.trim()) {
+                showMessage('error', 'Digite a conta de destino.');
+                return;
+            }
+
+            if (saldo < amount) {
+                showMessage('error', 'Saldo insuficiente para realizar a transferência.');
+                return;
+            }
+
+            // Simulação da transferência (deduzindo o valor do saldo)
+            saldo -= amount;
+            localStorage.setItem('saldo', saldo.toFixed(2));
+
+            // Exibindo mensagem de sucesso
+            showMessage('success', 'Transferência realizada com sucesso!');
+        }
+
+        function showMessage(type, message) {
+            var messageDiv = document.getElementById('message');
+            messageDiv.textContent = message;
+            messageDiv.className = type === 'success' ? 'success-message' : 'error-message';
+            messageDiv.classList.remove('hidden');
+        }
+    </script>
 </body>
 </html>
