--- a/SistemaBancarioWeb/TelaRegistrar/register.html
+++ b/SistemaBancarioWeb/TelaRegistrar/register.html
@@ -13,8 +13,7 @@
 
     <section class="register-form">
         <h2>Cadastre-se</h2>
-        <form id="registerForm">
-
+        <form id="registerForm" action="../TelaLogin/login.html" method="POST">
             <label for="name">Nome:</label>
             <input type="text" id="name" name="name" required>
 
@@ -24,31 +23,23 @@
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
 
-            <button type="button" onclick="registerUser()">Cadastrar</button>
+            <button type="submit">Cadastrar</button>
         </form>
     </section>
 
     <script>
-        function generateAccountNumber() {
-            // Gera um número de conta aleatório
-            return Math.floor(Math.random() * 1000000);
-        }
-
-        function registerUser() {
+        document.getElementById("registerForm").addEventListener("submit", function(event) {
+            event.preventDefault(); // Impede o envio padrão do formulário
+            
             var name = document.getElementById("name").value;
             var age = document.getElementById("age").value;
             var email = document.getElementById("email").value;
 
-            // Gera o número da conta
-            var accountNumber = generateAccountNumber();
+            // Aqui você pode adicionar a lógica para enviar os dados para o servidor
+            // Por enquanto, vamos apenas redirecionar o usuário
 
-            // Armazena os dados do usuário no localStorage
-            localStorage.setItem('username', name);
-            localStorage.setItem('accountNumber', accountNumber);
-
-            // Redireciona para a página de dashboard
-            window.location.href = "dashboard.html?accountNumber=" + accountNumber + "&username=" + name;
-        }
+            window.location.href = "../TelaLogin/login.html"; // Redireciona para a página desejada
+        });
     </script>
 </body>
 </html>
