--- a/SistemaBancarioWeb/TelaRegistrar/register.html
+++ b/SistemaBancarioWeb/TelaRegistrar/register.html
@@ -13,7 +13,7 @@
 
     <section class="register-form">
         <h2>Cadastre-se</h2>
-        <form id="registerForm" action="../TelaLogin/login.html" method="POST">
+        <form id="registerForm">
             <label for="name">Nome:</label>
             <input type="text" id="name" name="name" required>
 
@@ -22,6 +22,9 @@
 
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
+
+            <label for="password">Senha:</label>
+            <input type="password" id="password" name="password" required>
 
             <button type="submit">Cadastrar</button>
         </form>
@@ -34,11 +37,42 @@
             var name = document.getElementById("name").value;
             var age = document.getElementById("age").value;
             var email = document.getElementById("email").value;
+            var password = document.getElementById("password").value;
 
-            // Aqui você pode adicionar a lógica para enviar os dados para o servidor
-            // Por enquanto, vamos apenas redirecionar o usuário
+            // Abre ou cria o banco de dados 'clientes' no navegador
+            var request = window.indexedDB.open("clientes", 1);
 
-            window.location.href = "../TelaLogin/login.html"; // Redireciona para a página desejada
+            request.onerror = function(event) {
+                console.log("Erro ao abrir o banco de dados:", event.target.errorCode);
+            };
+
+            request.onupgradeneeded = function(event) {
+                var db = event.target.result;
+                var objectStore = db.createObjectStore("cliente", { keyPath: "id", autoIncrement: true });
+                objectStore.createIndex("nome", "nome", { unique: false });
+                objectStore.createIndex("idade", "idade", { unique: false });
+                objectStore.createIndex("email", "email", { unique: true });
+                objectStore.createIndex("senha", "senha", { unique: false });
+            };
+
+            request.onsuccess = function(event) {
+                var db = event.target.result;
+                var transaction = db.transaction(["cliente"], "readwrite");
+                var objectStore = transaction.objectStore("cliente");
+
+                var cliente = { nome: name, idade: age, email: email, senha: password };
+                var requestAdd = objectStore.add(cliente);
+
+                requestAdd.onsuccess = function(event) {
+                    console.log("Cliente cadastrado com sucesso!");
+                    // Redirecionar o usuário ou exibir uma mensagem de sucesso
+                };
+
+                requestAdd.onerror = function(event) {
+                    console.log("Erro ao cadastrar o cliente:", event.target.error);
+                    // Exibir mensagem de erro para o usuário
+                };
+            };
         });
     </script>
 </body>
