--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
 
         </div>
     </section>
+<!--Recursos do Firebase-->
+<script src="https://www.gstatic.com/firebasejs/7.8.1/firebase-app.js"></script>
 
-
+<!--Nossa configuração-->
+<script src="js/utils.js"></script>
+<script src="js/firebase.js"></script>
 </body>
 </html>
